feat(python): add MCP extension and tool adapter

--- a/ali-agentic-adk-python/pyproject.toml
+++ b/ali-agentic-adk-python/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "openai",
     "boto3",
     "cohere",
+    "mcp>=1.15.0",
 
     # Alibaba Cloud SDKs
     "alibabacloud_ecd20200930",
@@ -46,4 +47,3 @@ include = [
     "LICENSE",
     "NOTICE",
 ]
-
