feat(python): add PDFDocLoader

--- a/ali-agentic-adk-python/pyproject.toml
+++ b/ali-agentic-adk-python/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "mcp>=1.15.0",
     "requests",
     "tencentcloud-sdk-python",
+    "PyPDF2",
 
     # Alibaba Cloud SDKs
     "alibabacloud_ecd20200930",
