--- a/ali-agentic-adk-python/pyproject.toml
+++ b/ali-agentic-adk-python/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "tencentcloud-sdk-python",
     "PyPDF2",
     "PyYAML",
+    "python-docx",
 
     # Alibaba Cloud SDKs
     "alibabacloud_ecd20200930",
