feat: add Momento

--- a/ali-langengine/pom.xml
+++ b/ali-langengine/pom.xml
@@ -224,6 +224,7 @@
 		<module>ali-langengine-community/ali-langengine-vectordb-rust</module>
 		<module>ali-langengine-community/ali-langengine-vectra</module>
 		<module>ali-langengine-community/ali-langengine-tile38</module>
+		<module>ali-langengine-community/ali-langengine-momento</module>
   </modules>
 
 	<dependencyManagement>
@@ -682,8 +683,8 @@
 								<goals>
 									<goal>aggregate</goal>
 								</goals>
-							</execution>
-						</executions>
+						</execution>
+					</executions>
 					</plugin>
 				</plugins>
 			</build>
