feat: enhance Neon

--- a/ali-langengine/ali-langengine-community/ali-langengine-neon/pom.xml
+++ b/ali-langengine/ali-langengine-community/ali-langengine-neon/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>pgvector</artifactId>
             <version>0.1.4</version>
         </dependency>
+        <!-- HikariCP Connection Pool -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
